fixed line length causing overflow

--- a/style/survey2.css
+++ b/style/survey2.css
@@ -74,7 +74,7 @@ p.set_definition {
 
 span.label {
   display: inline-block;
-  width: 30ch;
+  width: 20ch;
   margin-top: 0.3em;
   margin-left: 8ch;
   position: absolute;
